--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,8 +11,8 @@ permissions:
   contents: write
 
 jobs:
-  build:
-    name: Build and Release
+  build-linux-windows:
+    name: Build Linux and Windows
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -29,29 +29,67 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y gcc-multilib gcc-mingw-w64
+          sudo apt-get install -y gcc-mingw-w64
 
       - name: Build binaries
         run: |
-          # Extract version from tag
-          VERSION=${GITHUB_REF#refs/tags/}
-
           # Linux amd64
           GOOS=linux GOARCH=amd64 CGO_ENABLED=1 go build -o ted-linux-amd64 -ldflags "-s -w" .
 
-          # Linux arm64
-          GOOS=linux GOARCH=arm64 CGO_ENABLED=1 CC=aarch64-linux-gnu-gcc go build -o ted-linux-arm64 -ldflags "-s -w" .
+          # Windows amd64
+          GOOS=windows GOARCH=amd64 CGO_ENABLED=1 CC=x86_64-w64-mingw32-gcc go build -o ted-windows-amd64.exe -ldflags "-s -w" .
 
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: linux-windows-binaries
+          path: |
+            ted-linux-amd64
+            ted-windows-amd64.exe
+
+  build-macos:
+    name: Build macOS
+    runs-on: macos-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.25.1'
+          cache: true
+
+      - name: Build binaries
+        run: |
           # macOS amd64
           GOOS=darwin GOARCH=amd64 CGO_ENABLED=1 go build -o ted-darwin-amd64 -ldflags "-s -w" .
 
           # macOS arm64
           GOOS=darwin GOARCH=arm64 CGO_ENABLED=1 go build -o ted-darwin-arm64 -ldflags "-s -w" .
 
-          # Windows amd64
-          GOOS=windows GOARCH=amd64 CGO_ENABLED=1 CC=x86_64-w64-mingw32-gcc go build -o ted-windows-amd64.exe -ldflags "-s -w" .
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: macos-binaries
+          path: |
+            ted-darwin-amd64
+            ted-darwin-arm64
 
-          # Create checksums
+  release:
+    name: Create Release
+    needs: [build-linux-windows, build-macos]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+
+      - name: Prepare release files
+        run: |
+          mv artifacts/linux-windows-binaries/* .
+          mv artifacts/macos-binaries/* .
           sha256sum ted-* > checksums.txt
 
       - name: Create Release
@@ -62,10 +100,9 @@ jobs:
           generate_release_notes: true
           files: |
             ted-linux-amd64
-            ted-linux-arm64
+            ted-windows-amd64.exe
             ted-darwin-amd64
             ted-darwin-arm64
-            ted-windows-amd64.exe
             checksums.txt
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
