--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,6 +81,25 @@ jobs:
     needs: [build-linux-windows, build-macos]
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Extract tag message
+        id: tag_message
+        run: |
+          TAG_MESSAGE=$(git tag -l --format='%(contents)' ${GITHUB_REF#refs/tags/})
+          if [ -z "$TAG_MESSAGE" ]; then
+            echo "No annotated tag message found, will use auto-generated notes"
+            echo "use_tag_message=false" >> $GITHUB_OUTPUT
+          else
+            echo "use_tag_message=true" >> $GITHUB_OUTPUT
+            echo "tag_message<<EOF" >> $GITHUB_OUTPUT
+            echo "$TAG_MESSAGE" >> $GITHUB_OUTPUT
+            echo "EOF" >> $GITHUB_OUTPUT
+          fi
+
       - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
@@ -88,21 +107,32 @@ jobs:
 
       - name: Prepare release files
         run: |
+          VERSION=${GITHUB_REF#refs/tags/v}
+
           mv artifacts/linux-windows-binaries/* .
           mv artifacts/macos-binaries/* .
-          sha256sum ted-* > checksums.txt
+
+          # Package binaries into tar.gz with proper naming
+          tar -czf ted_${VERSION}_Linux_amd64.tar.gz ted-linux-amd64
+          tar -czf ted_${VERSION}_Darwin_amd64.tar.gz ted-darwin-amd64
+          tar -czf ted_${VERSION}_Darwin_arm64.tar.gz ted-darwin-arm64
+          zip ted_${VERSION}_Windows_amd64.zip ted-windows-amd64.exe
+
+          # Create checksums for the archives
+          sha256sum ted_${VERSION}_*.tar.gz ted_${VERSION}_*.zip > checksums.txt
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
           draft: false
           prerelease: ${{ contains(github.ref, '-') }}
-          generate_release_notes: true
+          body: ${{ steps.tag_message.outputs.use_tag_message == 'true' && steps.tag_message.outputs.tag_message || '' }}
+          generate_release_notes: ${{ steps.tag_message.outputs.use_tag_message == 'false' }}
           files: |
-            ted-linux-amd64
-            ted-windows-amd64.exe
-            ted-darwin-amd64
-            ted-darwin-arm64
+            ted_*_Linux_amd64.tar.gz
+            ted_*_Darwin_amd64.tar.gz
+            ted_*_Darwin_arm64.tar.gz
+            ted_*_Windows_amd64.zip
             checksums.txt
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
