shifting completion and telemetry commands to flags
should improve tab completion for databases

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -215,7 +215,9 @@ jobs:
 
             def install
               bin.install "ted"
-              generate_completions_from_executable(bin/"ted", "completion")
+
+              # Generate shell completions
+              generate_completions_from_executable(bin/"ted", "--completion", shells: [:bash, :zsh, :fish])
             end
 
             test do
